sign up route is ready to use

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://sammegh0305:IvWCwbzJbqy59fL5@mychat.d5jdm.mongodb.net/MyChat_db?retryWrites=true&w=majority&appName=MyChat
-Port=8081;
+Port=8081
 
 JWT_SECRET=MyChatSecretKeyBySamMegh
 NODE_ENV=development
