image id upload at telegram now

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,7 @@ CLOUDINARY_CLOUD_NAME=ddr8pts2c
 CLOUDINARY_API_KEY=616736738592273
 CLOUDINARY_API_SECRET=L9zw1DQaIICC0UjpC8hiamNyaSE
 NODE_ENV=development
+
+
+BOT_TOKEN="7413446470:AAG8DY5idqdvBVASb5aQltFRySh4zqeOkTI"
+CHAT_ID=5205592663
